Added chrome.devtools.network.onNavigated listener. Log is cleared only after navigate to new page or clear buton press.

--- a/panel.html
+++ b/panel.html
@@ -29,7 +29,11 @@
 
         <div class="toolbar-input">
             <label for="persist">Persist</label>
-            <input type="checkbox" name="persist" id="persistCheckBox" value="persist" checked>
+            <input type="checkbox" name="persist" id="persistCheckBox" value="persist">
+        </div>
+        <div class="toolbar-input">
+            <label for="collapseOldCheckBox">Collapse old</label>
+            <input type="checkbox" name="collapseOldCheckBox" id="collapseOldCheckBox" value="collpase" disabled>
         </div>
 
         <div name="space" class="space"></div>
@@ -62,13 +66,6 @@
         <div class='font-resizer'>
            <img id="fontDown" src="ico/fontDown.png"  title="Decrease font size">
            <img id="fontUp" src="ico/fontUp.png"  title="Increase font size">
-        </div>
-
-        <div name="space" class="space"></div>
-
-        <div class="toolbar-input">
-            <label for="collapseOldCheckBox">Collapse old</label>
-            <input type="checkbox" name="collapseOldCheckBox" id="collapseOldCheckBox" value="collpase" checked>
         </div>
 
         <div name="space" class="space"></div>
